--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,40 @@
-#div1 {
-  background-image: url("https://picsum.photos/id/237/200/300");
+.image:nth-child(1){
+  background-image: url("https://picsum.photos/id/237/200/300?v=1");
   height: 300px;
   width: 200px;
   margin: 20px;
 }
 
-#div2 {
-  background-image: url("https://picsum.photos/seed/picsum/200/300");
+.image:nth-child(2){
+  background-image: url("https://picsum.photos/seed/picsum/200/300?v=2");
   height: 300px;
   width: 200px;
   margin: 20px;
 }
 
-#div3 {
-  background-image: url("https://picsum.photos/200/300?grayscale");
+.image:nth-child(3){
+  background-image: url("https://picsum.photos/200/300?grayscale?v=3");
   height: 300px;
   width: 200px;
   margin: 20px;
 }
 
-#div4 {
-  background-image: url("https://picsum.photos/200/300/");
+.image:nth-child(4){
+  background-image: url("https://picsum.photos/200/300/?v=4");
   height: 300px;
   width: 200px;
   margin: 20px;
 }
 
-#div5 {
-  background-image: url("https://picsum.photos/200/300.jpg");
+.image:nth-child(5){
+  background-image: url("https://picsum.photos/200/300.jpg?v=5");
   height: 300px;
   width: 200px;
   margin: 20px;
 }
 
-#div6 {
-  background-image: url("https://picsum.photos/id/102/200/300");
+.image:nth-child(6){
+  background-image: url("https://picsum.photos/id/102/200/300?v=6");
   height: 300px;
   width: 200px;
   margin: 20px;
